--- a/.github/workflows/artefact.yml
+++ b/.github/workflows/artefact.yml
@@ -10,6 +10,15 @@ jobs:
 
     steps:
 
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+            key: ${{ secrets.SSH_PRIVATE_KEY }}
+            known_hosts: 'know-host-placeholder'
+
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+
       - name: Checkout
         uses: actions/checkout@v2
 
